nlw/share/skin/s3/css/wikiwyg.css
body {
    text-align: left;
    background: none;
    background-color: #FFFFDD;
}

body.wiki {
    padding: 0 !important;
    line-height: normal !important;
    font-size: 11px !important;
}

table {
    border: 1px solid black;
}

ol, ul {
    padding-left: 25px;
}

ol {
    list-style: decimal outside none;
}

ul {
    list-style: disc outside none;
}

ul ul, ol ul {
    list-style-type: circle;
}

ol ol ul, ol ul ul, ul ol ul, ul ul ul {
    list-style-type: square;
}

li {
    padding: 3px 0px;
}

td {
    border: 1px solid black;
    padding: 1px;
    font-size: 80%;
}


/* Same as in common/css/common.css, but with !important to override our own screen.css settings. */
#wysiwyg-editable-div ol,
#wysiwyg-editable-div ul,
#wysiwyg-editable-div p {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

table .current-cell {
    background: red;
}

